--- a/docs/package.json
+++ b/docs/package.json
@@ -15,19 +15,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
-    "@mdx-js/react": "^2.3.0",
-    "@svgr/webpack": "^6.5.1",
+    "@docusaurus/core": "2.0.1",
+    "@docusaurus/preset-classic": "2.0.1",
+    "@mdx-js/react": "^1.6.21",
+    "@algolia/client-search": "^4.9.0",
+    "webpack": "^5.50.0",
     "clsx": "^1.2.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loadable": "^5.5.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.3.1",
+    "@docusaurus/module-type-aliases": "2.0.1",
     "@tsconfig/docusaurus": "^1.0.6",
     "typescript": "^4.9.5"
   },
