--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -67,9 +67,9 @@ open = { optional = true, version = "4.1.0" }
 cargo_toml = { optional = true, version = "0.15.2" }
 
 # plugin_storage
-aws-config = { optional = true, version = "0.14.0" }
+# aws-config = { optional = true, version = "0.14.0" }
 aws-types = { optional = true, version = "0.8.0" }
-aws-endpoint = { optional = true, version = "0.14.0" }
+# aws-endpoint = { optional = true, version = "0.14.0" }
 aws-sdk-s3 = { optional = true, version = "0.8.0" }
 http = { optional = true, version = "0.2.9" }
 diesel_derives = { optional = true, version = "2.1.0" }
@@ -83,7 +83,6 @@ utoipa = { optional = true, version = "3", features = [
   "chrono",
   "openapi_extensions",
 ] }
-utoipa-swagger-ui = { optional = true, version = "3", features = ["actix-web"] }
 
 # plugin_tasks
 fang = { optional = true, version = "0.10.3" }
@@ -100,14 +99,14 @@ poem = { optional = true, version = "1.3.55", features = [
 ] }
 
 # actix_web dependencies
-actix-multipart = { optional = true, version = "0.6.0" }
+# actix-multipart = { optional = true, version = "0.6.0" }
 actix-files = { optional = true, version = "0.6.2" }
 actix-http = { optional = true, version = "3.3.1" }
 actix-web = { optional = true, version = "4.3.1" }
-actix-web-httpauth = { optional = true, version = "0.8.0" }
+# actix-web-httpauth = { optional = true, version = "0.8.0" }
 derive_more = { optional = true, version = "0.99.17" }
 futures = { optional = true, version = "0.3.28" }
-env_logger = { optional = true, version = "0.10.0" }
+# env_logger = { optional = true, version = "0.10.0" }
 
 # axum dependencies (not yet released; only used for plugin_dev)
 
@@ -159,9 +158,9 @@ plugin_auth = [
   "dyn-clone",
 ]
 plugin_storage = [
-  "aws-config",
+  # "aws-config",
   "aws-types",
-  "aws-endpoint",
+  # "aws-endpoint",
   "aws-sdk-s3",
   "tokio",
   "http",
@@ -172,18 +171,18 @@ plugin_storage = [
   "base64",
 ] # note: might need to add "futures-util"?
 plugin_graphql = []
-plugin_utoipa = ["utoipa", "utoipa-swagger-ui", "backend_actix-web"]
+plugin_utoipa = ["utoipa", "backend_actix-web"]
 plugin_tasks = ["fang"]
 backend_poem = ["poem", "anyhow", "mime_guess", "tokio"]
 backend_actix-web = [
   "actix-web",
   "actix-http",
   "actix-files",
-  "actix-multipart",
-  "actix-web-httpauth",
+  # "actix-multipart",
+  # "actix-web-httpauth",
   "derive_more",
   "futures",
-  "env_logger",
+  # "env_logger",
 ]
 backend_axum = ["axum", "axum/ws", "tokio"]
 database_sqlite = [
