--- a/create-rust-app_cli/Cargo.toml
+++ b/create-rust-app_cli/Cargo.toml
@@ -27,7 +27,7 @@ walkdir = "2.3.3"
 rust-embed = { version = "6.6.1", features = ["debug-embed"] }
 clap = { version = "4.3", features = ["wrap_help", "derive", "cargo"] }
 toml = "0.7.4"
-tsync = "1"
+# tsync = "1"
 update-informer = "1.0.0"
 qsync = { version = "0.1" }
 
